<resources>
    <string name="app_name">Motorcar</string>
    <string name="driver">Driver</string>
    <string name="merchant">Merchant</string>
    <string name="sign_in">Signup</string>
    <string name="login">Login</string>
    <string name="email_phone_number">Email/Phone Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="you_don_t_have_a_account">You don\'t have a account?</string>
    <string name="sign_up">Signup</string>
    <string name="my_car">My Car</string>
    <string name="search">Search</string>
    <string name="search_car">Search Car</string>
    <string name="home">Home</string>
    <string name="write_a_review">Write a review</string>
    <string name="share_app">Share app</string>
    <string name="contact_admin">Contact admin</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="about_us">About us</string>
    <string name="cookies">Cookies</string>
    <string name="change_password">Change password</string>
    <string name="logout">Logout</string>
    <string name="chat">Chat</string>
    <string name="add">Add</string>
    <string name="my_request">My Request</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tell_use_what_your_car_needs">Tell use what your Car needs.</string>
    <string name="what_do_you_want_help_with">What do you want help with ?</string>
    <string name="add_car">Add Car</string>
    <string name="select_car_brand">Select Car Brand</string>
    <string name="save_my_car">Save My Car</string>
    <string name="electric">Electric</string>
    <string name="gas">Gas</string>
    <string name="diesel">Diesel</string>
    <string name="petrol">Petrol</string>
    <string name="categories">Categories</string>
    <string name="new_request">New Request</string>
    <string name="other_requirement">Other Requirement</string>
    <string name="wax">Wax</string>
    <string name="submit">Submit</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update">Update</string>
    <string name="notification">Notification</string>
    <string name="confirm_code">Confirm Code</string>
    <string name="my_order">My Order</string>
    <string name="shop">Shop</string>
    <string name="request_details">Request Details</string>
    <string name="quotations">Quotations</string>
    <string name="seller_details">Seller Details</string>
    <string name="messages">Messages</string>
    <string name="offer">Offer</string>
    <string name="filter">Filter</string>
    <string name="rate_now">Rate Now</string>
    <string name="clear_all">Clear All</string>
    <string name="signup">Signup</string>
    <string name="register_account">Register Account</string>
    <string name="next">Next</string>
    <string name="add_account">Add Account</string>
    <string name="select_your_expertise">Select Your Expertise</string>
    <string name="submit_quote">Submit Quote</string>
    <string name="add_new_services">Add New Services</string>
    <string name="add_offer">Add Offer</string>
    <string name="offer_details">Offer Details</string>
    <string name="edit_offer">Edit Offer</string>
    <string name="brands">Brands</string>
    <string name="add_address">Add Address</string>
    <string name="order_details">Order Details</string>
    <string name="do_you_want_to_logout">Do you want to logout?</string>
    <string name="do_you_want_to_cancel">do you want to cancel?</string>
    <string name="cancel">Cancel</string>
    <string name="pause">Pause</string>
    <string name="do_you_want_to_pause">do you want to pause?</string>
    <string name="do_you_want_to_accept">Do you want to accept?</string>
    <string name="accept">Accept</string>
    <string name="shop_more">Shop More</string>
    <string name="complete">Complete</string>
    <string name="do_you_want_to_complete">Do you want to complete</string>
    <string name="delete">Delete</string>
    <string name="do_you_want_to_delete">Do you want to delete?</string>
    <string name="edit_car">Edit Car</string>
    <string name="avail_offer">Avail Offer</string>
    <string name="are_you_sure_you_want_to_avail_offer">Are you sure you want to avail offer?</string>
    <string name="no_internate_connection">No internate connection</string>

</resources>