<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_home"
        android:icon="@drawable/ic_home_white"
        android:title="@string/home" />
    <item
        android:id="@+id/bottom_chat"
        android:icon="@drawable/ic_chat_white"
        android:title="@string/chat" />
    <item
        android:id="@+id/bottom_add_car"
        android:icon="@drawable/ic_add_white"
        android:title="@string/add_car" />
    <item
        android:id="@+id/bottom_request"
        android:icon="@drawable/ic_my_request_white"
        android:title="@string/my_request" />
<!--    <item-->
<!--        android:visible="false"-->
<!--        android:id="@+id/bottom_profile"-->
<!--        android:icon="@drawable/ic_profile_white"-->
<!--        android:title="@string/profile"/>-->
    <item
        android:id="@+id/bottom_shop"
        android:icon="@drawable/ic_shop"
        android:title="@string/shop"
        />


</menu>