<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".driver.ui.activity.MainActivity">


    <include
        android:id="@+id/include"
        layout="@layout/layout_header" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView2"
        android:layout_width="@dimen/dimen_100"
        android:layout_height="@dimen/dimen_100"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="68dp"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/dimen_10"
        app:cardElevation="@dimen/dimen_5"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="false"
        app:layout_constraintBottom_toBottomOf="@+id/materialCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/materialCardView"
        app:layout_constraintTop_toTopOf="@+id/materialCardView">

        <ImageView
            android:id="@+id/iv_image3"
            android:layout_width="@dimen/dimen_30"
            android:layout_height="@dimen/dimen_30"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_marchent"/>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="@dimen/dimen_100"
        android:layout_height="@dimen/dimen_100"
        android:layout_marginStart="68dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="20dp"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/yellow_200"
        app:cardCornerRadius="@dimen/dimen_10"
        app:cardElevation="@dimen/dimen_5"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="false"
        app:layout_constraintEnd_toStartOf="@+id/materialCardView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">

        <ImageView
            android:id="@+id/iv_image_driver"
            android:layout_width="@dimen/dimen_30"
            android:layout_height="@dimen/dimen_30"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_user_grey" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nexa_bold"
        android:text="@string/driver"
        android:textSize="@dimen/text_12"
        app:layout_constraintEnd_toEndOf="@+id/materialCardView"
        app:layout_constraintStart_toStartOf="@+id/materialCardView"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nexa_bold"
        android:text="@string/merchant"
        android:textSize="@dimen/text_12"
        app:layout_constraintEnd_toEndOf="@+id/materialCardView2"
        app:layout_constraintStart_toStartOf="@+id/materialCardView2"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:enabled="true"
        android:paddingLeft="@dimen/dimen_30"
        android:paddingTop="@dimen/dimen_10"
        android:paddingRight="@dimen/dimen_30"
        android:paddingBottom="@dimen/dimen_10"
        android:text="@string/sign_in"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/materialCardView2"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/materialCardView"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView2" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/login_button"
        app:layout_constraintStart_toStartOf="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@+id/login_button">

        <ImageView
            android:layout_width="@dimen/dimen_24"
            android:layout_height="@dimen/dimen_24"
            android:src="@drawable/uk" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_10"
            android:layout_marginRight="@dimen/dimen_10"
            android:fontFamily="@font/nexa_light"
            android:text="English"
            android:textColor="@color/black"
            android:textSize="@dimen/text_15" />

        <ImageView
            android:layout_width="@dimen/dimen_24"
            android:layout_height="@dimen/dimen_24"
            android:src="@drawable/ic_down_circle" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/nexa_light"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="@dimen/text_22"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>