<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/dimen_50"
    android:layout_marginTop="@dimen/dimen_40"
    android:layout_marginEnd="@dimen/dimen_50">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50"
        android:background="@color/yellow_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_cross"
            android:layout_width="@dimen/text_30"
            android:layout_height="@dimen/text_30"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dimen_10"
            app:srcCompat="@drawable/ic_close_circle" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dimen_10"
            android:fontFamily="@font/nexa_light"
            android:text="Select Fuel Type"
            android:textColor="@color/black"
            android:textSize="@dimen/text_16"
            app:layout_constraintBottom_toBottomOf="@+id/iv_cross"
            app:layout_constraintTop_toTopOf="@+id/iv_cross" />
    </RelativeLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2">

        <RadioButton
            android:id="@+id/rb_petrol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_10"
            android:buttonTint="@color/black"
            android:fontFamily="@font/nexa_bold"
            android:padding="@dimen/dimen_10"
            android:text="@string/petrol"
            android:textColor="@color/selected_radio_button"
            android:textSize="@dimen/text_12" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1"
            android:background="@color/grey" />

        <RadioButton
            android:id="@+id/rb_diesel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_10"
            android:buttonTint="@color/black"
            android:fontFamily="@font/nexa_bold"
            android:padding="@dimen/dimen_10"
            android:textColor="@color/selected_radio_button"
            android:text="@string/diesel"
            android:textSize="@dimen/text_12" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1"
            android:background="@color/grey" />

        <RadioButton
            android:id="@+id/rb_gas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_10"
            android:buttonTint="@color/black"
            android:textColor="@color/selected_radio_button"
            android:fontFamily="@font/nexa_bold"
            android:padding="@dimen/dimen_10"
            android:text="@string/gas"
            android:textSize="@dimen/text_12" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1"
            android:background="@color/grey" />

        <RadioButton
            android:id="@+id/rb_electric"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_10"
            android:buttonTint="@color/black"
            android:fontFamily="@font/nexa_bold"
            android:textColor="@color/selected_radio_button"
            android:padding="@dimen/dimen_10"
            android:text="@string/electric"
            android:textSize="@dimen/text_12" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1"
            android:background="@color/grey" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp"
        android:enabled="true"
        android:fontFamily="@font/nexa_bold"
        android:paddingTop="@dimen/dimen_10"
        android:paddingBottom="@dimen/dimen_10"
        android:text="Cancel"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/text_12"
        app:backgroundTint="#E2E2E2"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/login_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="5dp"
        android:enabled="true"
        android:fontFamily="@font/nexa_bold"
        android:paddingLeft="@dimen/dimen_30"
        android:paddingTop="@dimen/dimen_10"
        android:paddingRight="@dimen/dimen_30"
        android:paddingBottom="@dimen/dimen_10"
        android:text="OK"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/text_12"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/materialButton"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>